# tally

./: CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  TODO.md
.github/workflows/: release.yml
.tally/: config.toml  history.json  ignore
.tally/hooks/: post-commit
completions/: completions.bash  completions.elvish  completions.fish  completions.ps1  completions.zsh
example/: CHANGELOG.md  TODO.md
example/.dotxt/: ARCHIVE.md
scripts/: publish.lash
scripts/release/: prepare.sh
src/: completions.rs  lib.rs  main.rs
src/application/cli/: arguments.rs  dispatch.rs
src/application/commands/: add.rs  changelog.rs  config.rs  done.rs  edit.rs  init.rs  list.rs  mod.rs  projects.rs  prune.rs  release.rs  released.rs  remove.rs  scan.rs  semver.rs  status.rs  unrelease.rs  yank.rs
src/git/: mod.rs
src/models/: app_config.rs  mod.rs
src/models/changes/: change.rs  changelog.rs  log.rs  mod.rs  release.rs
src/models/common/: enums.rs  mod.rs  version.rs
src/models/tasks/: list.rs  mod.rs  task.rs
src/output/: json.rs  mod.rs  pager.rs  prompt.rs
src/services/: git.rs  mod.rs  source.rs  todo_serializer.rs
src/services/git/: commits.rs  hooks.rs  mod.rs
src/services/git/scripts/: post-commit
src/services/serializers/: changelog_serializer.rs  mod.rs  todo_serializer.rs
src/services/storage/: changelog_storage.rs  config_storage.rs  history_storage.rs  ignore_storage.rs  mod.rs  project_registry_storage.rs  task_storage.rs
src/utils/: matching.rs  mod.rs  project_paths.rs  task_input.rs
tests/application/commands/: list_tests.rs  scan_tests.rs
tests/models/common/: version_tests.rs
tests/services/serializers/: changelog_serializer_tests.rs  todo_serializer_tests.rs
tests/services/storage/: config_storage_tests.rs  history_storage_tests.rs
