[package]
name = "tally-todo"
version = "0.3.2"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Make TODO management a little more automatic"
repository = "https://github.com/what386/tally"
keywords = ["todo", "tasks", "cli", "productivity"]
categories = ["command-line-utilities", "development-tools"]

exclude = [
    ".github",
    "scripts/",
]

[[bin]]
name = "tally"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
console = "0.16.2"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"
