[package]
name = "tally-todo"
version = "0.14.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Make TODO management a little more automatic"
repository = "https://github.com/what386/tally"
keywords = ["todo", "tasks", "cli", "productivity"]
categories = ["command-line-utilities", "development-tools"]

exclude = [
    ".github",
    "scripts/",
    "completions/"
]

[features]
default = []
shell-completions = ["dep:clap_complete"]

[[bin]]
name = "completions"
path = "src/completions.rs"
required-features = ["shell-completions"]

[[bin]]
name = "tally"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
console = "0.16.2"
clap_complete = { version = "4.6", optional = true }
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"
